tests/machine/x/cpp/sort_stable.error
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:42:36: error: ‘i’ was not declared in this scope
   42 |     std::vector<std::pair<decltype(i.n), decltype(i.v)>> __items;
      |                                    ^
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:42:42: error: template argument 1 is invalid
   42 |     std::vector<std::pair<decltype(i.n), decltype(i.v)>> __items;
      |                                          ^~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:42:42: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:42:55: error: template argument 1 is invalid
   42 |     std::vector<std::pair<decltype(i.n), decltype(i.v)>> __items;
      |                                                       ^~
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:42:55: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:44:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   44 |       __items.push_back({i.n, i.v});
      |               ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:46:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
   46 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:46:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
   46 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:48:30: error: template argument 1 is invalid
   48 |     std::vector<decltype(i.v)> __res;
      |                              ^
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:48:30: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:49:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
   49 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:4:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:49:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
   49 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:50:13: error: request for member ‘push_back’ in ‘__res’, which is of non-class type ‘int’
   50 |       __res.push_back(p.second);
      |             ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:53:33: error: request for member ‘size’ in ‘result’, which is of non-class type ‘int’
   53 |   for (size_t i = 0; i < result.size(); ++i) {
      |                                 ^~~~
/workspace/mochi/tests/machine/x/cpp/sort_stable.cpp:56:24: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
   56 |     std::cout << result[i];
      |                        ^
