tests/machine/x/cpp/sort_stable.cpp
// Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
#include <algorithm>
#include <any>
#include <iostream>
#include <string>
#include <utility>
#include <vector>

inline bool __any_eq(const std::any &a, const std::any &b) {
  if (a.type() != b.type())
    return false;
  if (a.type() == typeid(int))
    return std::any_cast<int>(a) == std::any_cast<int>(b);
  if (a.type() == typeid(double))
    return std::any_cast<double>(a) == std::any_cast<double>(b);
  if (a.type() == typeid(bool))
    return std::any_cast<bool>(a) == std::any_cast<bool>(b);
  if (a.type() == typeid(std::string))
    return std::any_cast<std::string>(a) == std::any_cast<std::string>(b);
  return false;
}
inline void __print_any(const std::any &a) {
  if (a.type() == typeid(int))
    std::cout << std::any_cast<int>(a);
  else if (a.type() == typeid(double))
    std::cout << std::any_cast<double>(a);
  else if (a.type() == typeid(bool))
    std::cout << (std::any_cast<bool>(a) ? "true" : "false");
  else if (a.type() == typeid(std::string))
    std::cout << std::any_cast<std::string>(a);
}

struct Item {
  int n;
  std::any v;
};
int main() {
  std::vector<Item> items = {Item{1, std::string("a")},
                             Item{1, std::string("b")},
                             Item{2, std::string("c")}};
  auto result = ([&]() {
    std::vector<std::pair<decltype(i.n), decltype(i.v)>> __items;
    for (auto i : items) {
      __items.push_back({i.n, i.v});
    }
    std::sort(__items.begin(), __items.end(),
              [](auto &a, auto &b) { return a.first < b.first; });
    std::vector<decltype(i.v)> __res;
    for (auto &p : __items)
      __res.push_back(p.second);
    return __res;
  })();
  for (size_t i = 0; i < result.size(); ++i) {
    if (i)
      std::cout << ' ';
    std::cout << result[i];
  }
  return 0;
}
